合并GlobalSettingFactory与FieldStation到common-starter，修复camelCase字段映射bug